sponsor info fix
fix sponsor info break on mobile

--- a/css/altcss.css
+++ b/css/altcss.css
@@ -721,5 +721,11 @@ tr{
     table{
         font-size:.5em;
     }
+    .sponsor-pg{
+        width:90%;
+        float:none;
+        margin:0 auto;
+        display:block;
+    }
 
 }
